Fix missing margin definitions for mobile viewport (#13)

--- a/src/Resources/public/css/columns.css
+++ b/src/Resources/public/css/columns.css
@@ -171,7 +171,14 @@
 }
 @media screen and (max-width: 599px) {
   .rs-column {
+    margin-top: 7.69231%;
     margin-right: 7.69231%;
+  }
+  .rs-column.-large-last {
+    margin-right: 7.69231%;
+  }
+  .rs-column.-large-first-row {
+    margin-top: 7.69231%;
   }
   .rs-column.-medium-first {
     clear: none;
